pxc/tests/test_01_px/constinh2.px

import io;

interface ifoo {
  function int mfoo(long v) const;
}

struct sfoo : ifoo : {
  function int mfoo(long v) { // error: constness
    return 3 + v;
  }
}

ref{sfoo} p = ref(sfoo());
ref{ifoo} ip = p;
io::println(ip->mfoo(3));

